# api/openapi.bundled.json
@@ -17,7 +17,7 @@
   ],
   "security": [
     {
-      "bearerAuth": []
+      "cookieAuth": []
     }
   ],
   "tags": [
@@ -2118,10 +2118,10 @@
   },
   "components": {
     "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
+      "cookieAuth": {
+        "type": "apiKey",
+        "in": "cookie",
+        "name": "mdrive_session"
       }
     },
     "responses": {
